add: routes for updating by id, deleted by id, getting the list of categories by filters
