# docs/openapi.yaml
@@ -51,12 +51,87 @@ paths:
               schema:
                 $ref: '#/components/schemas/ServiceUnavailableResponse'
 
+    get:
+      tags:
+        - Categories
+      summary: List categories
+      description: Retrieves a list of categories with optional filtering and pagination
+      parameters:
+        - name: category_name
+          in: query
+          description: Filter by category name
+          schema:
+            type: string
+            example: Электроника
+        - name: language
+          in: query
+          description: Filter by language
+          schema:
+            type: string
+            enum: [ tj, ru, en ]
+            example: ru
+        - name: page
+          in: query
+          description: Page number for pagination
+          schema:
+            type: integer
+            minimum: 1
+            example: 1
+        - name: page_size
+          in: query
+          description: Number of items per page
+          schema:
+            type: integer
+            minimum: 1
+            example: 10
+        - name: sort
+          in: query
+          description: Sorting field and direction (e.g., 'category_name:asc')
+          schema:
+            type: string
+            example: category_name:asc
+      responses:
+        '200':
+          description: Categories retrieved successfully
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  categories:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/CategoryResponse'
+                  metadata:
+                    $ref: '#/components/schemas/Metadata'
+        '400':
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/BadRequestResponse'
+        '500':
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/InternalServerErrorResponse'
+
+
   /categories/:id:
     get:
       tags:
         - Categories
       summary: Get a category
       description: Gets a category with the provided category_id
+      parameters:
+        - name: id
+          in: path
+          description: ID of the category to update
+          required: true
+          schema:
+            type: integer
+            minimum: 1
       responses:
         '200':
           description: Get category successfully
@@ -79,6 +154,94 @@ paths:
               schema:
                 $ref: "#/components/schemas/ErrCategoryNotFound"
 
+        '500':
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/InternalServerErrorResponse'
+
+    patch:
+      tags:
+        - Categories
+      summary: Update a category
+      description: Updates an existing category with the provided category_id
+      parameters:
+        - name: id
+          in: path
+          description: ID of the category to update
+          required: true
+          schema:
+            type: integer
+            minimum: 1
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/UpdateCategoryRequest'
+      responses:
+        '200':
+          description: Category updated successfully
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/CategoryResponse'
+        '400':
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/BadRequestResponse'
+        '404':
+          description: Category not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrCategoryNotFound'
+        '500':
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/InternalServerErrorResponse'
+
+    delete:
+      tags:
+        - Categories
+      summary: Delete a category
+      description: Deletes a category with the provided category_id
+      parameters:
+        - name: id
+          in: path
+          description: ID of the category to delete
+          required: true
+          schema:
+            type: integer
+            minimum: 1
+      responses:
+        '200':
+          description: Category deleted successfully
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: category was successfully deleted
+        '400':
+          description: Invalid type of id
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrCategoryBindResponse'
+        '404':
+          description: Category not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrCategoryNotFound'
         '500':
           description: Internal server error
           content:
@@ -285,3 +448,67 @@ components:
             details:
               type: string
               example: Category you are seeking does not exist
+
+    UpdateCategoryRequest:
+      type: object
+      properties:
+        category_name:
+          type: string
+          description: Name of the category to update
+          example: Электроника
+          maxLength: 50
+        parent_id:
+          type: integer
+          nullable: true
+          description: ID of the parent category (if any)
+          example: 1
+        language:
+          type: string
+          description: Language of the category
+          enum: [ tj, ru, en ]
+          example: ru
+        attribute_schema:
+          type: object
+          description: JSON schema for category attributes
+          example: {
+            "type": "object",
+            "title": "Электроника",
+            "description": "Атрибуты для категории электроники",
+            "required": [ "гарантия", "бренд" ],
+            "properties": {
+              "гарантия": {
+                "type": "integer",
+                "description": "Срок гарантии в месяцах",
+                "minimum": 0,
+                "maximum": 60
+              },
+              "бренд": {
+                "type": "string",
+                "enum": [ "Samsung", "Apple", "Xiaomi", "Другое" ]
+              }
+            }
+          }
+
+    Metadata:
+      type: object
+      properties:
+        current_page:
+          type: integer
+          description: Current page number
+          example: 1
+        page_size:
+          type: integer
+          description: Number of items per page
+          example: 10
+        first_page:
+          type: integer
+          description: First page number
+          example: 1
+        last_page:
+          type: integer
+          description: Last page number
+          example: 5
+        total_records:
+          type: integer
+          description: Total number of records
+          example: 50
